flowable and reduce and singleobserver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Composable.ComposableActivity"/>
+        <activity android:name=".FlowableActivity"/>
     </application>
 
 </manifest>
