--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Composable.ComposableActivity"/>
+        <activity android:name=".ComposableActivity"/>
         <activity android:name=".FlowableActivity"/>
     </application>
 
