--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".ComposableActivity"/>
         <activity android:name=".FlowableActivity"/>
+        <activity android:name=".CompletableActivity"/>
+        <activity android:name=".MapActivity"/>
     </application>
 
 </manifest>
