--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".FlowableActivity"/>
         <activity android:name=".CompletableActivity"/>
         <activity android:name=".MapActivity"/>
+        <activity android:name=".ZipActivity"/>
     </application>
 
 </manifest>
